<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
<TextView  
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text="@string/hello"
    android:id="@+id/hello"/>
<LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:id="@+id/linearLayout1" android:layout_marginBottom="50px" android:layout_gravity="center_horizontal">
    <Button android:layout_height="wrap_content" android:id="@+id/start" android:text="@string/start_service" android:layout_gravity="left" android:layout_weight="1" android:layout_width="0dp"></Button>
    <Button android:layout_height="wrap_content" android:id="@+id/stop" android:text="@string/stop_service" android:layout_gravity="right" android:layout_weight="1" android:layout_width="0dp"></Button>
</LinearLayout>
<Button android:layout_height="wrap_content" android:id="@+id/preference" android:text="@string/preference" android:layout_width="fill_parent"></Button>
</LinearLayout>
